Disable auto publish

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     },
     "win": {
       "target": "nsis"
-    }
+    },
+    "publish": null
   },
   "dependencies": {
     "@syncfusion/ej2-base": "^32.2.6",
